--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -895,7 +895,7 @@
     <string name="power_screen" msgid="2353149143338929583">"Display"</string>
     <string name="power_wifi" msgid="2382791137776486974">"WLAN"</string>
     <string name="power_bluetooth" msgid="4373329044379008289">"Bluetooth"</string>
-    <string name="power_cell" msgid="6596471490976003056">"Handy-Standby"</string>
+    <string name="power_cell" msgid="6596471490976003056">"Mobilfunk-Standby"</string>
     <string name="power_phone" msgid="5392641106474567277">"Anrufe"</string>
     <string name="power_idle" msgid="9055659695602194990">"Telefon inaktiv"</string>
     <string name="usage_type_cpu" msgid="715162150698338714">"CPU insgesamt"</string>
